[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialogic/Images/plugin-editor-icon.svg" type="Texture" id=1]
[ext_resource path="res://addons/dialogic/Editor/ThemeEditor/ThemeEditor.gd" type="Script" id=2]

[node name="ThemeEditor" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1048.0
margin_bottom = 607.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1048.0
margin_bottom = 202.0

[node name="Text" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 316.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer2/Text"]
margin_right = 316.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Text/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/Text"]
margin_top = 34.0
margin_right = 316.0
margin_bottom = 202.0
size_flags_horizontal = 3
custom_constants/hseparation = 10
columns = 2

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_top = 3.0
margin_right = 148.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Font"

[node name="FontButton" type="Button" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_left = 158.0
margin_right = 316.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "DefaultFont"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_top = 32.0
margin_right = 148.0
margin_bottom = 46.0
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_left = 158.0
margin_top = 24.0
margin_right = 316.0
margin_bottom = 54.0
rect_min_size = Vector2( 50, 30 )
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_top = 66.0
margin_right = 148.0
margin_bottom = 80.0
text = "Shadow"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_left = 158.0
margin_top = 58.0
margin_right = 316.0
margin_bottom = 88.0

[node name="CheckBoxShadow" type="CheckBox" parent="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 30.0

[node name="ColorPickerButtonShadow" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 158.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0.619608 )

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_top = 97.0
margin_right = 148.0
margin_bottom = 111.0
text = "Shadow Offset"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_left = 158.0
margin_top = 92.0
margin_right = 316.0
margin_bottom = 116.0
custom_constants/separation = 10

[node name="ShadowOffsetX" type="SpinBox" parent="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
value = 2.0
rounded = true
allow_lesser = true
prefix = "X"

[node name="ShadowOffsetY" type="SpinBox" parent="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 158.0
margin_bottom = 24.0
value = 2.0
rounded = true
allow_lesser = true
prefix = "Y"

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_top = 125.0
margin_right = 148.0
margin_bottom = 139.0
text = "Speed (bigger = slower)"

[node name="TextSpeed" type="SpinBox" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_left = 158.0
margin_top = 120.0
margin_right = 316.0
margin_bottom = 144.0
max_value = 10.0
value = 2.0
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_top = 151.0
margin_right = 148.0
margin_bottom = 165.0
text = "Alignment"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Text/GridContainer"]
margin_left = 158.0
margin_top = 148.0
margin_right = 316.0
margin_bottom = 168.0

[node name="Alignment" type="OptionButton" parent="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer3"]
margin_right = 158.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Left"
items = [ "Left", null, false, 0, null, "Center", null, false, 1, null, "Right", null, false, 2, null ]
selected = 0

[node name="DialogBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 320.0
margin_right = 614.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer2/DialogBox"]
margin_right = 294.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Dialog Box"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/DialogBox"]
margin_top = 34.0
margin_right = 294.0
margin_bottom = 190.0
size_flags_horizontal = 3
custom_constants/hseparation = 10
columns = 2

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_top = 5.0
margin_right = 132.0
margin_bottom = 19.0
text = "Background Color"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_left = 142.0
margin_right = 294.0
margin_bottom = 24.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_top = 33.0
margin_right = 132.0
margin_bottom = 47.0
text = "Background Texture"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_left = 142.0
margin_top = 28.0
margin_right = 294.0
margin_bottom = 52.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="BackgroundTextureButton" type="Button" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer3"]
margin_left = 28.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "background-2"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_top = 59.0
margin_right = 132.0
margin_bottom = 73.0
text = "Next dialog indicator"

[node name="NextIndicatorButton" type="Button" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_left = 142.0
margin_top = 56.0
margin_right = 294.0
margin_bottom = 76.0
text = "next-indicator"

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_top = 85.0
margin_right = 132.0
margin_bottom = 99.0
text = "Box padding"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_left = 142.0
margin_top = 80.0
margin_right = 294.0
margin_bottom = 104.0

[node name="TextOffsetV" type="SpinBox" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
value = 10.0
rounded = true
allow_lesser = true

[node name="TextOffsetH" type="SpinBox" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
value = 20.0
rounded = true
allow_lesser = true

[node name="Label7" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_top = 113.0
margin_right = 132.0
margin_bottom = 127.0
text = "Box Size (pixels)"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_left = 142.0
margin_top = 108.0
margin_right = 294.0
margin_bottom = 132.0

[node name="BoxSizeW" type="SpinBox" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer4"]
margin_right = 74.0
margin_bottom = 24.0
value = 100.0
rounded = true
allow_greater = true
allow_lesser = true

[node name="BoxSizeH" type="SpinBox" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer4"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
max_value = 999.0
value = 167.0
rounded = true
allow_greater = true
allow_lesser = true

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_top = 136.0
margin_right = 132.0
margin_bottom = 156.0
size_flags_vertical = 5
text = "Action key"

[node name="BoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer"]
margin_left = 142.0
margin_top = 136.0
margin_right = 294.0
margin_bottom = 156.0

[node name="ActionOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/BoxContainer"]
margin_right = 152.0
margin_bottom = 20.0
hint_tooltip = "To add/remove actions go to Project > Project Settings > Input Map"
size_flags_horizontal = 3
text = "[Select Action]"
items = [ "[Select Action]", null, false, 0, null, "ui_accept", null, false, 1, null, "ui_select", null, false, 2, null, "ui_cancel", null, false, 3, null, "ui_focus_next", null, false, 4, null, "ui_focus_prev", null, false, 5, null, "ui_left", null, false, 6, null, "ui_right", null, false, 7, null, "ui_up", null, false, 8, null, "ui_down", null, false, 9, null, "ui_page_up", null, false, 10, null, "ui_page_down", null, false, 11, null, "ui_home", null, false, 12, null, "ui_end", null, false, 13, null ]
selected = 0

[node name="ButtonStyle" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 618.0
margin_right = 906.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer2/ButtonStyle"]
margin_right = 288.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonStyle/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Choice Buttons"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/ButtonStyle"]
margin_top = 34.0
margin_right = 288.0
margin_bottom = 170.0
size_flags_horizontal = 3
custom_constants/hseparation = 10
columns = 2

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_top = 5.0
margin_right = 126.0
margin_bottom = 19.0
text = "Text Color "

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_left = 136.0
margin_right = 288.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer4"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="ButtonTextColor" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer4"]
margin_left = 28.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 1 )

[node name="Label7" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_top = 33.0
margin_right = 126.0
margin_bottom = 47.0
text = "Background Color"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_left = 136.0
margin_top = 28.0
margin_right = 288.0
margin_bottom = 52.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_top = 61.0
margin_right = 126.0
margin_bottom = 75.0
text = "Background Texture"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_left = 136.0
margin_top = 56.0
margin_right = 288.0
margin_bottom = 80.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="BackgroundTextureButton" type="Button" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer3"]
margin_left = 28.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "background-2"

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_top = 89.0
margin_right = 126.0
margin_bottom = 103.0
text = "Box padding"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_left = 136.0
margin_top = 84.0
margin_right = 288.0
margin_bottom = 108.0

[node name="TextOffsetV" type="SpinBox" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
value = 5.0
rounded = true
allow_lesser = true
prefix = "V"

[node name="TextOffsetH" type="SpinBox" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
value = 5.0
rounded = true
allow_lesser = true
prefix = "H"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_top = 117.0
margin_right = 126.0
margin_bottom = 131.0
text = "Vertical separation"

[node name="VerticalSeparation" type="SpinBox" parent="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer"]
margin_left = 136.0
margin_top = 112.0
margin_right = 288.0
margin_bottom = 136.0
value = 5.0
rounded = true
allow_lesser = true

[node name="Glossary" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 910.0
margin_right = 1048.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="VBoxContainer/HBoxContainer2/Glossary"]
margin_right = 138.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Glossary/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Glossary Panel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/Glossary"]
margin_top = 34.0
margin_right = 138.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_constants/hseparation = 10
columns = 2

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Font"

[node name="FontButton" type="Button" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
margin_left = 43.0
margin_right = 138.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "GlossaryFont"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
margin_top = 32.0
margin_right = 33.0
margin_bottom = 46.0
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
margin_left = 43.0
margin_top = 24.0
margin_right = 138.0
margin_bottom = 54.0
rect_min_size = Vector2( 50, 30 )
color = Color( 0.215686, 0.654902, 0.67451, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
visible = false
margin_top = 66.0
margin_right = 141.0
margin_bottom = 80.0
text = "Shadow"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
visible = false
margin_top = 58.0
margin_right = 213.0
margin_bottom = 88.0

[node name="CheckBoxShadow" type="CheckBox" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 30.0

[node name="ColorPickerButtonShadow" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 213.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0.619608 )

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
visible = false
margin_top = 63.0
margin_right = 141.0
margin_bottom = 77.0
text = "S, Offset"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer"]
visible = false
margin_top = 58.0
margin_right = 213.0
margin_bottom = 82.0
custom_constants/separation = 10

[node name="ShadowOffsetX" type="SpinBox" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
value = 2.0
rounded = true
allow_lesser = true
prefix = "X"

[node name="ShadowOffsetY" type="SpinBox" parent="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 158.0
margin_bottom = 24.0
value = 2.0
rounded = true
allow_lesser = true
prefix = "Y"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 217.0
margin_right = 1048.0
margin_bottom = 277.0
custom_constants/separation = 10

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
margin_right = 886.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
text = "This is preview text. You can use  [color=#A5EFAC]BBCode[/color] to style it. 
[wave amp=50 freq=2]You can even use effects![/wave]"
wrap_enabled = true

[node name="PreviewButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 896.0
margin_right = 1048.0
margin_bottom = 60.0
text = "  Preview changes  "
icon = ExtResource( 1 )

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 1048.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 300 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 607.0
margin_right = 1048.0
margin_bottom = 607.0

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 1048.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Text/GridContainer/FontButton" to="." method="_on_FontButton_pressed"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/Text/GridContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer2/CheckBoxShadow" to="." method="_on_CheckBoxShadow_toggled"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer2/ColorPickerButtonShadow" to="." method="_on_ColorPickerButtonShadow_color_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer/ShadowOffsetX" to="." method="_on_ShadowOffset_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer/ShadowOffsetY" to="." method="_on_ShadowOffset_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/Text/GridContainer/TextSpeed" to="." method="_on_textSpeed_value_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/Text/GridContainer/HBoxContainer3/Alignment" to="." method="_on_Alignment_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer2/CheckBox" to="." method="_on_BackgroundColor_CheckBox_toggled"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer2/ColorPickerButton" to="." method="_on_BackgroundColor_ColorPickerButton_color_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer3/CheckBox" to="." method="_on_BackgroundTexture_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer3/BackgroundTextureButton" to="." method="_on_BackgroundTextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/NextIndicatorButton" to="." method="_on_NextIndicatorButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer/TextOffsetV" to="." method="_on_TextMargin_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer/TextOffsetH" to="." method="_on_TextMargin_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer4/BoxSizeW" to="." method="_on_BoxSize_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/HBoxContainer4/BoxSizeH" to="." method="_on_BoxSize_value_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/BoxContainer/ActionOptionButton" to="." method="_on_ActionOptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DialogBox/GridContainer/BoxContainer/ActionOptionButton" to="." method="_on_ActionOptionButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer4/CheckBox2" to="." method="_on_Custom_Button_Color_toggled"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer4/ButtonTextColor" to="." method="_on_ButtonTextColor_color_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer2/CheckBox" to="." method="_on_button_background_visible_toggled"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer2/ColorPickerButton" to="." method="_on_button_background_color_color_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer3/CheckBox" to="." method="_on_button_texture_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer3/BackgroundTextureButton" to="." method="_on_ButtonTextureButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer/TextOffsetV" to="." method="_on_ButtonOffset_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/HBoxContainer/TextOffsetH" to="." method="_on_ButtonOffset_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/ButtonStyle/GridContainer/VerticalSeparation" to="." method="_on_VerticalSeparation_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Glossary/GridContainer/FontButton" to="." method="_on_GlossaryFontButton_pressed"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/Glossary/GridContainer/ColorPickerButton" to="." method="_on_GlossaryColorPicker_color_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer2/CheckBoxShadow" to="." method="_on_CheckBoxShadow_toggled"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer2/ColorPickerButtonShadow" to="." method="_on_ColorPickerButtonShadow_color_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer/ShadowOffsetX" to="." method="_on_ShadowOffset_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/Glossary/GridContainer/HBoxContainer/ShadowOffsetY" to="." method="_on_ShadowOffset_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/PreviewButton" to="." method="_on_PreviewButton_pressed"]
